test/types/range/cast-assign-init/illegal-assigns.4-5.good
illegal-assigns.chpl:11: error: assigning to a range with idxType int(64) from a range with idxType uint(64) without an explicit cast
